[gd_scene load_steps=4 format=3 uid="uid://bo8gwo72vdffr"]

[ext_resource type="Script" uid="uid://bhtka0boq1qgc" path="res://Scripts/GUI/PauseMenu.gd" id="1_cmt41"]
[ext_resource type="Theme" uid="uid://b048pmwu1trqg" path="res://Assets/Themes/PauseTheme.tres" id="1_exk8j"]
[ext_resource type="PackedScene" uid="uid://diefpogffw68t" path="res://Scenes/GUI/options.tscn" id="3_exk8j"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
layer = 100

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.862745)

[node name="pauseMenu" type="Control" parent="."]
process_mode = 3
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_exk8j")
script = ExtResource("1_cmt41")

[node name="VBoxContainer" type="VBoxContainer" parent="pauseMenu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -201.5
offset_right = 350.0
offset_bottom = 201.5
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Continue" type="Button" parent="pauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
text = "Continue"

[node name="Options" type="Button" parent="pauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
text = "Options"

[node name="Notes" type="Button" parent="pauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
text = "Notes"

[node name="Restart" type="Button" parent="pauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
text = "Restart"

[node name="QuitButton" type="Button" parent="pauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
text = "Quit"

[node name="Options" parent="." instance=ExtResource("3_exk8j")]
visible = false

[node name="CheckButton" type="CheckButton" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -201.0
offset_bottom = 31.0
grow_horizontal = 0
button_pressed = true
text = "Debug Menu"

[connection signal="pressed" from="pauseMenu/VBoxContainer/Continue" to="pauseMenu" method="_on_continue_pressed"]
[connection signal="pressed" from="pauseMenu/VBoxContainer/Options" to="pauseMenu" method="_on_options_pressed"]
[connection signal="pressed" from="pauseMenu/VBoxContainer/Restart" to="pauseMenu" method="_on_restart_pressed"]
[connection signal="pressed" from="pauseMenu/VBoxContainer/QuitButton" to="pauseMenu" method="_on_quit_button_pressed"]
[connection signal="toggled" from="CheckButton" to="pauseMenu" method="_on_check_button_toggled"]
